# lithium-plus

./: README.md  credentials.env  pyproject.toml
backend/: activity_definition.py  configs.py  fleet_overview.json  fleet_overview.py  loading_data.py  preprocessing.py
frontend/poc/: .gitignore  pubspec.yaml
frontend/poc/asset/mock_data/: fleet_overview.json
frontend/poc/lib/: app_router.dart  app_router.gr.dart  layout_page.dart  layout_view_model.dart  main.dart  web_app.dart
frontend/poc/lib/fahrzeug_dashboard/model/: usage.dart  vehicle.dart
frontend/poc/lib/fahrzeug_dashboard/pages/: vehicle_page.dart
frontend/poc/lib/fleets_dashboard/model/: fleet.dart
frontend/poc/lib/fleets_dashboard/pages/: fleet_page.dart
frontend/poc/lib/fleets_dashboard/view_model/: fleet_page_view_model.dart
frontend/poc/lib/fleets_dashboard/widgets/: operation_time.dart  serach.dart  status_of_health.dart  usage_pie.dart  vehicle_item.dart  vehicles.dart
frontend/poc/lib/flotte_dashboard/pages/: flotte_page.dart
frontend/poc/test/: widget_test.dart
